--- a/refining-your-workflows.qmd
+++ b/refining-your-workflows.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Refining your plots, reports and code"
 subtitle: 'MSc in Statistics 2025/26, Imperial College London'
-author: "Zak Varty"
+author: "Cameron Keatinge"
 format:
   html:
     toc: true
