--- a/palmer_penguins.qmd
+++ b/palmer_penguins.qmd
@@ -41,27 +41,24 @@ require(kableExtra)
 
 This Rmarkdown document is my first Quarto file, analysing the palmer penguins dataset [@casella2024statistical]
 
-Please note:
+# Difference of weights between different species
 
-- Rmarkdown syntax for the title and document style;
-- bookdown syntax to label and reference equations;
-- bookdown syntax to referencing literate and provide a bib file;
-- kable syntax to build clean and clear tables that can be referenced;
-- Rmarkdown inline functions to collect and print all code used.
+```{r, echo=FALSE, warning=FALSE}
+library(palmerpenguins)
+#install.packages("palmerpenguins")
+```
 
-# Sampling from the Cauchy distribution
+This is the code which produces the following graph
+```{r}
+plot(x = penguins$species, 
+     y = penguins$body_mass_g, 
+     ylab = "Body mass (g)", 
+     xlab = "Species",
+     col = c(6,3,4))
+abline(h = mean(penguins$body_mass_g,na.rm = TRUE), col = 2, lwd = 2)
+```
 
-In this question we seek to generate samples from the standard Cauchy distribution, with pdf given by
-\begin{equation}
-  p(x) = \frac{1}{\pi (1 + x^2)}, \quad x \in \mathbb{R}.
-  (\#eq:1)
-\end{equation}
-The cdf associated with \@ref(eq:1) is given by
-\begin{equation}
-  F(x) = \frac{1}{\pi}\arctan(x) + \frac{1}{2}.
-  (\#eq:2)
-\end{equation}
-
+#Next Section
 **Part a.**  We apply the inversion method as described by @graham2013stochastic. We first compute the generalised inverse of the cdf \@ref(eq:2).  To this end, let $y\in [0,1]$, then
 
 \begin{align}
